added link to home

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Andy B</title>
 </head>
 <body>
-	<h3>Andy B Github</h3>
+	<h3>Andy B's Github</h3>
+	<p><a href="http://andybritcliffe.com">More...</a></p>
 </body>
 </html>
